--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+            <dependency>
+    	    <groupId>org.jenkins-ci.plugins</groupId>
+    	    <artifactId>kubernetes-cd</artifactId>
+    	    <version>2.3.1</version>
+	</dependency>
     </dependencies>
  
     <build>
